# spec-dec-study

./: .gitignore  EXPERIMENTS.md  MEMORY_TROUBLESHOOTING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  run.sh  run_all_experiments.py  run_batch.py
configs/: baseline.yaml  llama3.1_8b_baseline.yaml  llama3.1_8b_eagle3.yaml  llama3_70b_baseline.yaml  llama3_70b_ngram.yaml  llama3_8b_baseline.yaml  llama3_8b_eagle.yaml  llama3_8b_ngram.yaml  qwen2_72b_baseline.yaml  qwen2_72b_eagle.yaml  qwen2_72b_ngram.yaml  qwen2_7b_baseline.yaml  qwen2_7b_eagle.yaml  qwen2_7b_ngram.yaml  qwen3_32b_baseline.yaml  qwen3_32b_ngram.yaml  speculative_example.yaml
data/: example_benchmark.jsonl  qa.jsonl
specdec_study/: __init__.py  __main__.py  benchmark.py  config.py  metrics.py  run_experiment.py  runner.py  server_manager.py  utils.py
